--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+    <color name="dark_sky_blue">#4e92df</color>
+    <color name="brownish_grey">#6e6e6e</color>
+    <color name="tangerine">#ff9b00</color>
+
 </resources>
