--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/parentLayout"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -12,7 +13,7 @@
         android:layout_height="?attr/actionBarSize">
 
         <TextView
-            android:id="@+id/toolbar_textview"
+            android:id="@+id/toolbarText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
@@ -31,6 +32,7 @@
 
         <EditText
             android:id="@+id/emailEditText"
+            android:inputType="textEmailAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
@@ -50,6 +52,7 @@
 
         <EditText
             android:id="@+id/passwordEditText"
+            android:inputType="textPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
