--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="default_margin">32dp</dimen>
     <dimen name="vertical_margin">24dp</dimen>
     <dimen name="password_hint_icon_size">24dp</dimen>
+    <dimen name="default_padding">32dp</dimen>
 </resources>
