--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="default_margin">32dp</dimen>
-    <dimen name="vertical_margin">24dp</dimen>
+    <dimen name="vertical_margin">16dp</dimen>
     <dimen name="password_hint_icon_size">24dp</dimen>
     <dimen name="default_padding">32dp</dimen>
+    <dimen name="progress_bar_size">48dp</dimen>
 </resources>
